# routers/user.js
@@ -3,6 +3,7 @@ const {
   getUserByAddress,
   loginSocial,
   verifySocial,
+  getSocialByAddress,
 } = require("../controllers/user.constroller");
 
 const router = require("express").Router();
@@ -11,5 +12,6 @@ router.post("/createUser", createUser);
 router.get("/", getUserByAddress);
 router.put("/", loginSocial);
 router.post("/verifySocial", verifySocial);
+router.get("/social", getSocialByAddress);
 
 module.exports = router;
